--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
     "license": "MIT",
     "require": {
         "php": ">=7.4",
-        "cakephp/cakephp": "~4.2.0"
+        "cakephp/cakephp": "^4.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
-        "cakephp/cakephp-codesniffer": "~4.2.0",
+        "cakephp/cakephp-codesniffer": "^4.2",
         "phpstan/phpstan": "^0.12.30"
     },
     "autoload": {
