--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
     ],
     "license": "MIT",
     "require": {
-        "php": ">=7.4",
-        "cakephp/cakephp": "^4.2"
+        "php": "^8.1",
+        "cakephp/cakephp": "^5.x-dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0",
-        "cakephp/cakephp-codesniffer": "^4.2",
+        "phpunit/phpunit": "^9.5",
+        "cakephp/cakephp-codesniffer": "^5.0",
         "phpstan/phpstan": "^1.9"
     },
     "autoload": {
@@ -40,6 +40,8 @@
         "stan": "phpstan analyze",
         "test": "phpunit --colors=always"
     },
+    "prefer-stable": true,
+    "minimum-stability": "dev",
     "config": {
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
