--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "cakephp/cakephp": "^5.x-dev"
+        "cakephp/cakephp": "^5.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.1.0",
@@ -41,7 +41,7 @@
         "test": "phpunit --colors=always"
     },
     "prefer-stable": true,
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "config": {
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
